Add cameras list endpoint
