# packages/api/src/routes/cameras/index.ts
@@ -1,0 +1,8 @@
+import express from "express";
+import { listCameras } from "./list";
+
+const camerasRouter = express.Router();
+
+camerasRouter.get("/", listCameras);
+
+export { camerasRouter };
