# packages/api/src/types/schemas/camera.ts
@@ -1,0 +1,5 @@
+import Camera from "@/db/models/Camera";
+
+export type CreateCameraRequest = Pick<Camera, "name" | "local_address">;
+
+export type CameraResponse = Camera;
